force-app/main/default/objects/aecm__Program__c/aecm__Program__c.object-meta.xml
<CustomObject>
    <description>Container for a collection of projects related by the context of a specific enterprise problem being solved or initiative. Programs are the child of a Function object.</description>
    <label>Program</label>
    <nameField>
        <label>Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>