force-app/main/default/objects/aecm__Program__c/fields/aecm__Active_Projects__c.field-meta.xml
<CustomField>
    <fullName>aecm__Active_Projects__c</fullName>
    <label>Active Projects</label>
    <summaryFilterItems>
        <field>aecm__Program_Project__c.aecm__Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>aecm__Program_Project__c.aecm__Program__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>