force-app/main/default/objects/aecm__Program__c/fields/aecm__Description__c.field-meta.xml
<CustomField>
    <fullName>aecm__Description__c</fullName>
    <inlineHelpText>Provide a comprehensive description for this program.</inlineHelpText>
    <label>Description</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>