force-app/main/default/objects/aecm__Program__c/fields/aecm__Executive_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>aecm__Executive_Sponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Executive Sponsor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Programs</relationshipName>
    <type>Lookup</type>
</CustomField>