force-app/main/default/objects/aecm__Program__c/fields/aecm__Function__c.field-meta.xml
<CustomField>
    <fullName>aecm__Function__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Parent Function for this program.</inlineHelpText>
    <label>Functional Unit</label>
    <referenceTo>aecm__Functional_Unit__c</referenceTo>
    <relationshipLabel>Programs</relationshipLabel>
    <relationshipName>Programs</relationshipName>
    <type>Lookup</type>
</CustomField>