force-app/main/default/objects/aecm__Program__c/fields/aecm__Program_Manager__c.field-meta.xml
<CustomField>
    <fullName>aecm__Program_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Programs1</relationshipName>
    <type>Lookup</type>
</CustomField>