force-app/main/default/objects/aecm__Program__c/fields/aecm__Risks__c.field-meta.xml
<CustomField>
    <fullName>aecm__Risks__c</fullName>
    <label>Risks</label>
    <summaryFilterItems>
        <field>aecm__Program_Risk__c.aecm__Status__c</field>
        <operation>notEqual</operation>
        <value>Risk Averted</value>
    </summaryFilterItems>
    <summaryForeignKey>aecm__Program_Risk__c.aecm__Program__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>