force-app/main/default/objects/aecm__Program__c/fields/aecm__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>aecm__Start_Date__c</fullName>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>