force-app/main/default/objects/aecm__Program__c/fields/aecm__Success_Criteria__c.field-meta.xml
<CustomField>
    <fullName>aecm__Success_Criteria__c</fullName>
    <label>Success Criteria</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>