force-app/main/default/objects/aecm__Program__c/fields/aecm__Summary__c.field-meta.xml
<CustomField>
    <fullName>aecm__Summary__c</fullName>
    <inlineHelpText>Provide a summary description for this program.</inlineHelpText>
    <label>Summary</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>