force-app/main/default/objects/aecm__Program__c/fields/aecm__Target_End_Date__c.field-meta.xml
<CustomField>
    <fullName>aecm__Target_End_Date__c</fullName>
    <label>Target End Date</label>
    <type>Date</type>
</CustomField>