force-app/main/default/objects/aecm__Program__c/fields/aecm__Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>aecm__Total_Cost__c</fullName>
    <label>Total Cost</label>
    <summarizedField>aecm__Program_Project__c.aecm__Budget_Total__c</summarizedField>
    <summaryFilterItems>
        <field>aecm__Program_Project__c.aecm__Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>aecm__Program_Project__c.aecm__Program__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>