force-app/main/default/objects/aecm__Program__c/listViews/aecm__Active_Programs.listView-meta.xml
<ListView>
    <fullName>aecm__Active_Programs</fullName>
    <columns>aecm__Function__c</columns>
    <columns>NAME</columns>
    <columns>aecm__Start_Date__c</columns>
    <columns>aecm__Status__c</columns>
    <columns>aecm__Risks__c</columns>
    <columns>aecm__Active_Projects__c</columns>
    <columns>aecm__Total_Cost__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>aecm__Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Programs</label>
</ListView>